@@ -1,3 +1,9 @@
+2007-09-11  Naba Kumar  <naba@gnome.org>
+
+	* libanjuta/interfaces/anjuta-idl-compiler.pl: Create default method
+	implementations to get warnings instead of crashes for unimplemented
+	interface methods.
+
 2007-09-11   Massimo Cora' <maxcvs@email.it>
 
 	Reviewed by: Naba Kumar  <naba@gnome.org>
